--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Kartify-Team/Kartify/issues"
   },
-  "homepage": "https://github.com/Kartify-Team/Kartify#readme"
+  "homepage": "https://github.com/Kartify-Team/Kartify#readme",
+  "devDependencies": {
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
+  }
 }
