--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js --watch",
-    "build": "webpack --watch"
+    "build": "webpack -d --watch"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/Kartify-Team/Kartify/issues"
   },
-  "homepage": "https://github.com/Kartify-Team/Kartify#readme"
+  "homepage": "https://github.com/Kartify-Team/Kartify#readme",
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  }
 }
