--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "url": "https://github.com/Kartify-Team/Kartify/issues"
   },
   "homepage": "https://github.com/Kartify-Team/Kartify#readme",
-
   "dependencies": {
+    "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
-  
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
