Fix syntax error

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "jest",
-    "test_start": "node server/index.js && jest"
+    "test_start": "node server/index.js && jest",
     "start": "nodemon server/index.js",
     "build": "webpack -d --watch",
     "travis": "node server/index.js"
