--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Kartify",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "jest": {
     "setupFilesAfterEnv": [
       "<rootDir>tests/setupTests.js"
@@ -25,11 +25,14 @@
   },
   "homepage": "https://github.com/Kartify-Team/Kartify#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-responsive-carousel": "^3.1.51"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
