--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
