--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test": "jest",
     "test_start": "node server/index.js && jest",
     "start": "nodemon server/index.js",
-    "build": "webpack -d --watch",
-    "travis": "node server/index.js"
+    "build": "webpack -d --watch"
   },
   "repository": {
     "type": "git",
@@ -34,7 +33,7 @@
     "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-responsive-carousel": "^3.1.51"
+    "react-responsive-carousel": "^3.1.51",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
