--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "css-loader": "^3.3.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "eslint-plugin-react": "^7.17.0",
     "jest": "^24.9.0",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
