--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
+    "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
