--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formik": "^2.0.8",
     "jest-fetch-mock": "^2.1.2",
     "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
