--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-images-upload": "^1.2.7",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
