--- a/package.json
+++ b/package.json
@@ -30,15 +30,18 @@
     "@brainhubeu/react-carousel": "^1.10.30",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.18.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-form-data": "^2.0.10",
     "formik": "^2.0.8",
     "jest-fetch-mock": "^2.1.2",
     "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-images-upload": "^1.2.7",
+    "react-dropzone": "^10.2.1",
     "react-modal": "^3.11.1",
+    "react-progress-button": "^5.1.0",
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
