--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "jest": {
     "setupFilesAfterEnv": [
       "<rootDir>tests/setupTests.js"
-    ]
+    ],
+    "verbose": true
   },
   "scripts": {
     "test": "jest",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.10.30",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.18.1",
     "dotenv": "^8.2.0",
@@ -44,6 +46,7 @@
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
     "react-slick": "^0.25.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
@@ -55,6 +58,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
@@ -65,6 +69,7 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "jest-puppeteer": "^4.3.0",
+    "puppeteer": "^2.0.0",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
