--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ language: node_js
 dist: trusty
 addons:
   chrome: stable
+  apt:
+    packages:
+      # This is required to run new chrome on old trusty
+      - libnss3
 notifications:
   email: false
 cache:
