--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ before_install:
   # Launch XVFB
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-install:
-  - npm install
-script:
-  # - npm run test:integration
-  - npm run test
+# install:
+#   - npm install
+# script:
+#   # - npm run test:integration
+#   - npm run test
