--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "verbose": true
   },
   "scripts": {
-    "test": "jest",
-    "test_coverage": "jest --coverage",
-    "test_start": "node server/index.js && jest",
-    "start": "nodemon server/index.js",
+    "build": "webpack --mode=production",
+    "test": "node server/index.js && jest",
+    "start": "node server",
     "build-dev": "webpack -d --watch",
-    "build-prod": "webpack --mode=production"
+    "test-coverage": "jest --coverage",
+    "start-dev": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
