--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "webpack --mode=production",
     "test": "node server/index.js && jest",
     "start": "node server/",
-    "start-forever": "pm2 start app.js -f",
+    "start-forever": "pm2 start server/ -f",
     "build-dev": "webpack -d --watch",
     "test-coverage": "jest --coverage",
     "start-dev": "nodemon server/index.js"
