--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.18.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "expect-puppeteer": "^4.4.0",
     "express": "^4.17.1",
