--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start-forever": "pm2 start server/ -f",
     "build-dev": "webpack -d --watch",
     "test-coverage": "jest --coverage",
-    "start-dev": "nodemon server/index.js"
+    "start-dev": "nodemon server/index.js",
+    "docker-push": "docker build -t lainermeister/kartify-front-end . && docker push lainermeister/kartify-front-end"
   },
   "repository": {
     "type": "git",
@@ -67,6 +68,7 @@
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.3.0",
+    "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint-plugin-react": "^7.17.0",
